benchmark-results/8/merge/cseq/concurrentwitness2test.2024-11-27_10-15-16.logfiles/SV-COMP23_unreach-call.cseq-safe027_rmo.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe027_rmo.yml/safe027_rmo.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe027_rmo.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_k8bw55n2/tmp/tmps2b40pp9.c
Compilation started
/tmp/BenchExec_run_k8bw55n2/tmp/tmps2b40pp9.c: In function ‘P0’:
/tmp/BenchExec_run_k8bw55n2/tmp/tmps2b40pp9.c:588:19: error: ‘FALSE’ undeclared (first use in this function)
  588 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_k8bw55n2/tmp/tmps2b40pp9.c:588:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_k8bw55n2/tmp/tmps2b40pp9.c: In function ‘P2’:
/tmp/BenchExec_run_k8bw55n2/tmp/tmps2b40pp9.c:639:19: error: ‘FALSE’ undeclared (first use in this function)
  639 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_k8bw55n2/tmp/tmps2b40pp9.c: In function ‘main’:
/tmp/BenchExec_run_k8bw55n2/tmp/tmps2b40pp9.c:732:19: error: ‘TRUE’ undeclared (first use in this function)
  732 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
